# github-activity

./: .gitignore  README.md  pyproject.toml
src/github_activity/: api.py  events.py  formatter.py  main.py  style.py
