[project]
name = "github-activity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
github-activity = "github_activity.main:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
